--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>{% block title %}Система Курс{% endblock %}</title>
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='manage_courses.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_cs.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='webd.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
