--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,19 +3,24 @@
 {% block title %}Вход{% endblock %}
 
 {% block content %}
+<div class="login-container">
     <h2>Вход в систему</h2>
-    <form action="/login" method="POST">
-        <div>
+    <form action="/login" method="POST" class="login-form">
+        <div class="form-group">
             <label for="login">Логин:</label>
             <input type="text" id="login" name="login" required>
         </div>
-        <div>
+        <div class="form-group">
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Войти</button>
-        <button type="button" onclick="window.location.href='http://localhost:3000/'">Назад</button>
+        <div class="button-group">
+            <button type="submit">Войти</button>
+            <button type="button" onclick="window.location.href='http://localhost:3000/'">Назад</button>
+        </div>
     </form>
-    <br>
-    <a href="/register">Регистрация</a>
+    <div class="register-link">
+        <a href="/register">Регистрация</a>
+    </div>
+</div>
 {% endblock %}
